# viraqucha_uml

./: .gitignore  README.md
doc/specs/: Projektdokumentation.ott  VqU0001_Projektdoku.odt  VqU0001_Projektuebersicht.odt  VqU0002_Datenmodell.odt  VqU0003_Projektdateien.odt  VqU0004_Datenaustausch.odt  VqU0005_Rueckgaengig.odt  VqU0006_Diagramme.odt  VqU0007_DialogeFenster.odt  VqU0008_Bearbeiten.odt  classifier_shape.odg  connector.odg  directed_graph.odg  main_window.odg  routing_types.odg
doc/srcdoc/: doxysettings.dox  makedoc.sh
img/: ViraquchaUML.gpl
src/: CMakeLists.txt  Uml.pro  mainpage.md  readme.md
src/GuiCommon/: CMakeLists.txt  ComboBoxDelegate.cpp  GuiCommon.h  GuiCommon.pri  GuiCommon.pro  MessageBox.cpp  MessageBox.h  MultiplicityUtils.cpp  MultiplicityUtils.h  Viraqucha.h
src/GuiDiagram/: AssociationShape.cpp  CMakeLists.txt  ClassifierShape.cpp  CommentShape.cpp  DependencyShape.cpp  DiagramScene.cpp  EdgeShape.cpp  GeneralizationShape.cpp  GeneralizationShape.h  GuiDiagram.h  GuiDiagram.pri  GuiDiagram.pro  LinkShape.cpp  LinkShape.h  NodeShape.cpp  NodeShape.h  PrimitiveTypeShape.cpp  RealizationShape.cpp  RealizationShape.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h  TemplateBox.cpp  TemplateBox.h
src/GuiProject/: CMakeLists.txt  GuiProject.h  GuiProject.pri  GuiProject.pro  ProjectTreeModel.cpp  ProjectTreeModel.h  ProjectTreeView.cpp  ProjectTreeView.h  TreeIconProvider.cpp
src/GuiResources/: CMakeLists.txt  GuiResources.h  GuiResources.pri  GuiResources.pro  GuiResources.qrc  IconProvider.cpp  IconProvider.h  StringProvider.cpp  StringProvider.h
src/GuiUndoing/: CMakeLists.txt  CommandStack.cpp  CommandStack.h  GuiUndoing.h  GuiUndoing.pri  GuiUndoing.pro  InsertCommand.cpp  InsertCommand.h  MoveCommand.cpp  MoveCommand.h  RemoveCommand.cpp  RemoveCommand.h  UndoCommand.cpp  UndoCommand.h
src/UmlClassifiers/: AggregationKind.h  AssociationEnd.cpp  AssociationEnd.h  CMakeLists.txt  CallConcurrencyKind.h  IProperty.h  Literal.cpp  Literal.h  ParameterDirectionKind.h  ParameterEffectKind.h  PropertyStrings.h  UmlAssociation.cpp  UmlAssociation.h  UmlAttribute.cpp  UmlAttribute.h  UmlClass.cpp  UmlClass.h  UmlClassifier.cpp  UmlClassifier.h  UmlClassifiers.cpp  UmlClassifiers.h  UmlClassifiers.pri  UmlClassifiers.pro  UmlComponent.cpp  UmlComponent.h  UmlDatatype.cpp  UmlDatatype.h  UmlEnumeration.cpp  UmlEnumeration.h  UmlGeneralization.cpp  UmlGeneralization.h  UmlInterface.cpp  UmlInterface.h  UmlLiteral.cpp  UmlLiteral.h  UmlOperation.cpp  UmlOperation.h  UmlParameter.cpp  UmlParameter.h  UmlPort.cpp  (+8 more)
src/UmlCommon/: AlignmentKind.h  CMakeLists.txt  Compartment.cpp  Compartment.h  DiaEdge.cpp  DiaEdge.h  DiaNode.cpp  DiaNode.h  DiaShape.cpp  DiaShape.h  DiagramKind.h  ErrorTools.cpp  ErrorTools.h  EventType.h  FormatKind.h  ICompartmentProvider.h  IElementBuilder.h  IElementObserver.h  ILabelProvider.h  IMultiplicityElement.h  INamedElement.h  ISerializable.h  IShapeObserver.h  IStereotypedElement.h  ITemplatableElement.h  IntrusivePtr.h  Label.cpp  Label.h  NameBuilder.cpp  NameBuilder.h  PropertyStrings.h  RoutingKind.h  SignatureChars.h  SignatureTools.cpp  SignatureTools.h  TextBox.cpp  TextBox.h  UmlComment.cpp  UmlComment.h  UmlCommon.cpp  (+34 more)
src/UnitTests/: TestProject.cpp  TestProject.h  UnitTests.pro  main.cpp
src/ViraquchaUML/: AssociationShape.cpp  AssociationShape.h  AttributeTab.cpp  AttributeTab.h  AttributeTab.ui  AttributesTab.cpp  AttributesTab.h  AttributesTab.ui  CMakeLists.txt  ClassifierShape.cpp  ClassifierShape.h  ClassifierTab.cpp  ClassifierTab.h  ClassifierTab.ui  ComboBoxDelegate.cpp  ComboBoxDelegate.h  CommentShape.h  CommentTab.cpp  CommentTab.h  CommentTab.ui  DependencyShape.cpp  DependencyShape.h  DiagramPage.cpp  DiagramPage.h  DiagramPage.ui  DiagramScene.cpp  DiagramScene.h  EdgeShape.cpp  EdgeShape.h  GeneralTab.cpp  GeneralTab.h  GeneralTab.ui  GeneralizationShape.cpp  GeneralizationShape.h  Globals.h  IPropertiesTab.h  IShapeBuilder.h  InsertCommand.h  LinkShape.cpp  MainWindow.cpp  (+61 more)
src/ViraquchaUML/ui/: ui_AttributeTab.h  ui_AttributesTab.h  ui_ClassifierTab.h  ui_CommentTab.h  ui_DiagramPage.h  ui_GeneralTab.h  ui_MainWindow.h  ui_MultiplicityTab.h  ui_NewDiagramDialog.h  ui_NewProjectDialog.h  ui_OperationTab.h  ui_OperationsTab.h  ui_ParameterTab.h  ui_PropertiesDialog.h  ui_StartPage.h  ui_TemplateParameterTab.h
